Added code for mood changing
Added code to ALAN for his facial expression to change based on which mood (state) he is being instructed to be set to

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,20 +154,20 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints/CommandInterface
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALANFaces.ALANFaces
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
-WindowSize=X=1273.000 Y=665.000
+WindowSize=X=1274.400 Y=666.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1036,26 +1036,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem1=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem7=/Game/ParticleFX/spraySystemBP
-MRUItem8=/Game/ParticleFX/spraySystem
-MRUItem9=/Game/ParticleFX/sprayTestBP
-MRUItem10=/Niagara/Modules/Emitter/EmitterState
-MRUItem11=/Game/Audio/Victory_Jingle/victoryjingle_Cue
-MRUItem12=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem13=/Game/PuzzleBP/Blueprints/Cube
-MRUItem14=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem15=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem16=/Game/Audio/Click12345/SFX_ButtonClick
-MRUItem17=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
-MRUItem18=/Game/PuzzleBP/Blueprints/ColourChanger1
-MRUItem19=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem1=/Game/PuzzleBP/Blueprints/ALANFaces
+MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem3=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem4=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem8=/Game/ParticleFX/spraySystemBP
+MRUItem9=/Game/ParticleFX/spraySystem
+MRUItem10=/Game/ParticleFX/sprayTestBP
+MRUItem11=/Niagara/Modules/Emitter/EmitterState
+MRUItem12=/Game/Audio/Victory_Jingle/victoryjingle_Cue
+MRUItem13=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
+MRUItem14=/Game/PuzzleBP/Blueprints/Cube
+MRUItem15=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem16=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem17=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem18=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
+MRUItem19=/Game/PuzzleBP/Blueprints/ColourChanger1
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2580,7 +2580,7 @@ Box_Bp_C=
 StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C=
+OutputDisplay_C="\"Object.PuzzleToLoad\" "
 ALAN_C=
 ConveyorBelt_C=
 Cube_C=
@@ -2818,13 +2818,13 @@ PreserveScaleRatio=True
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
-StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshComponent=
 ControlPanel_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+OutputDisplay_C=
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-ALAN_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+ALAN_C=
 BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
