Integrated Will's Spray Code
Integrated Will's spray particle effect code with the ALAN object so that ALAN will produce a colour matching spray effect when changing a boxes colour

Co-Authored-By: squill <69396972+squilll@users.noreply.github.com>

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -164,6 +164,9 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 CleanShutdown=False
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/ParticleFX/spraySystemBP.spraySystemBP
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1036,15 +1039,15 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem3=/Game/PuzzleBP/Blueprints/ALANFaces
-MRUItem4=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem5=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem8=/Game/ParticleFX/spraySystemBP
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem1=/Game/ParticleFX/spraySystemBP
+MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem3=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem5=/Game/PuzzleBP/Blueprints/ALANFaces
+MRUItem6=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
 MRUItem9=/Game/ParticleFX/spraySystem
 MRUItem10=/Game/ParticleFX/sprayTestBP
 MRUItem11=/Niagara/Modules/Emitter/EmitterState
@@ -2582,7 +2585,7 @@ StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 OutputDisplay_C="\"Object.PuzzleToLoad\" "
-ALAN_C=
+ALAN_C="\"Object.ShouldSkipCommand\" "
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
@@ -2590,6 +2593,8 @@ IORail2_IOconnectCylinders_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshC
 IORail2_IOconnectBox_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BoxSpawner_C="\"Object.SetToSpawn\" "
 BoxChecker_C=
+NiagaraComponent="\"Object.Tags.ComponentTags\" "
+FXSystemComponent="\"Object.Tags.ComponentTags\" "
 
 [MaterialEditor]
 PrimType=2
@@ -2927,7 +2932,7 @@ BoxSpawner_C=
 BoxChecker_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 sprayTestBP_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 PrimitiveComponent=
-spraySystemBP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+spraySystemBP_C=
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 
 [DetailMultiObjectNodeExpansion]
